readme 업데이트 / isBrightColor 함수 수정

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <main>
       <div>
         <div>
+          <h3>
+            사이트 사용 설명서 :
+            <a
+              href="https://github.com/tnfqkdrpwjd/log_back_up/blob/main/README.md"
+              >https://github.com/tnfqkdrpwjd/log_back_up/blob/main/README.md</a
+            >
+          </h3>
           <label for="logfile">코코포 파일 등록:</label>
           <input
             type="file"
