탭 선택후 흐리게 기능

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
           <button onclick="copyHtml()">수정된 html 복사</button>
         </div>
         <div>
+          <dic> 탭을 불투명하게 설정하려면 아래 버튼을 누르십시오. </dic>
+          <div id="TabSetC" class="buttonList"></div>
+        </div>
+        <div>
           <dic> 캐릭터 이미지를 설정하려면 아래 버튼을 누르십시오. </dic>
           <div id="imgSetB" class="buttonList"></div>
         </div>
-        <h2>파일 미리보기기:</h2>
+        <h2>파일 미리보기:</h2>
         <div
           id="htmlContent"
           style="border: 1px solid #ccc; padding: 10px; min-height: 100px"
